# OTUS_Homeworks

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  classifier.cpp  classifier.h  csvreader.cpp  csvreader.h  datapreprocessor.cpp  datapreprocessor.h  deploy.sh  ip_filter.cpp  ip_filter.h  lib.cpp  lib.h  list.h  main.cpp  my_allocator.cpp  my_allocator.h  rclss.cpp  rclst.cpp  testboost.cpp  user_data.h  version.h.in
.github/workflows/: release.yml
bayan/: CMakeLists.txt  Makefile  Makefile.conf
bayan/include/: bayan_finder.h  filemeta.h  hash.h
bayan/src/: bayan_finder.cpp  hash.cpp  main.cpp
bulk_server/: CMakeLists.txt  Doxyfile.in
bulk_server/test/: CMakeLists.txt  bulk_reader_test.cpp  thread_test.cpp
contrib/: Makefile
contrib/boost/: .gitignore  Makefile  make_boost.sh
contrib/gtest/: Makefile
src/: main.cpp
src/common/: counter.h  extractor.h  merge.h  split.h
src/core/: mapper.h  mapreduce.h  reducer.h
test/: testsplit.cpp
